name: RuzzSolver
version: 0.1.0.0
cabal-version: >= 1.10
build-type: Simple
license: GPL-3
license-file: LICENSE
maintainer: zigazou@free.fr
synopsis: Ruzzle Solver
description:  
category: Game
author: Frédéric BISSON
data-dir: ""
 
library
    build-depends: HUnit >=1.2 && <2, QuickCheck >=2.4, array -any,
                   base >=4.7, containers -any, test-framework >=0.4.1,
                   test-framework-hunit -any, test-framework-quickcheck2 -any,
                   template-haskell -any, th-lift -any
    exposed-modules: Dictionary
                     Solver.Helper
                     Solver.Path
                     Solver.Problem
                     Solver.Score
                     Solver.Types
                     Solver.Walker
    exposed: False
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall -rtsopts -threaded -fprof-auto -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns -fno-warn-unused-do-bind
 
executable RuzzSolver-profiling
    build-depends: HUnit >=1.2 && <2, QuickCheck >=2.4, array -any,
                   base >=4.7, containers -any, test-framework >=0.4.1,
                   test-framework-hunit -any, test-framework-quickcheck2 -any,
                   template-haskell -any, th-lift -any
    main-is: ruzzSolver.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall -rtsopts -threaded -fprof-auto -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns -fno-warn-unused-do-bind
 
executable RuzzSolver
    build-depends: HUnit >=1.2 && <2, QuickCheck >=2.4, array -any,
                   base >=4.7, containers -any, test-framework >=0.4.1,
                   test-framework-hunit -any, test-framework-quickcheck2 -any,
                   template-haskell -any, th-lift -any
    main-is: ruzzSolver.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall -fllvm -rtsopts -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns -fno-warn-unused-do-bind -O2
 
test-suite test-Solver
    build-depends: HUnit >=1.2 && <2, QuickCheck >=2.4, array -any,
                   base >=4.7, containers -any, test-framework >=0.4.1,
                   test-framework-hunit -any, test-framework-quickcheck2 -any,
                   template-haskell -any, th-lift -any
    type: exitcode-stdio-1.0
    main-is: testSolver.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src test
    ghc-options: -Wall -rtsopts
    x-uses-tf: true
test-suite test-Dictionary
    build-depends: HUnit >=1.2 && <2, QuickCheck >=2.4, array -any,
                   base >=4.7, containers -any, test-framework >=0.4.1,
                   test-framework-hunit -any, test-framework-quickcheck2 -any,
                   template-haskell -any, th-lift -any
    type: exitcode-stdio-1.0
    main-is: testDictionary.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src test
    ghc-options: -Wall -rtsopts
    x-uses-tf: true
 